--- a/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin Dashboard</title>
+    <title>Add Course</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'assets/bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -71,29 +71,29 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
+                            <li class="sidebar-search">
                             
-                            <!-- /input-group -->
-                        </li>
-                        <li class="active">
-                            <a href="#"> Dashboard </a>
-                        </li>
-                        <li>
-                            <a href="#"> Student Registration </a>
-                        </li>
-                        <li>
-                            <a href="#"> Teacher Registration </a>
-                        </li>
-                        <li>
-                            <a href="#"> Add  Department  </a>
-                        </li>
-                        <li>
-                            <a href="#"> Add Course </a>
-                        </li>
-                        <li>
-                            <a href="#"> Create Exam </a>
-                        </li>
-                    </ul>
+                                    <!-- /input-group -->
+                                </li>
+                                <li>
+                                    <a href="/dashboard/"> Dashboard </a>
+                                </li>
+                                <li>
+                                    <a href="/student_registration/"> Student Registration </a>
+                                </li>
+                                <li>
+                                    <a href="/teacher_registration/"> Teacher Registration </a>
+                                </li>
+                                <li>
+                                    <a href="/render_add_department/"> Add  Department  </a>
+                                </li>
+                                <li>
+                                    <a href="/add_course/"> Add Course </a>
+                                </li>
+                                <li>
+                                    <a href="/create_exam/"> Create Exam </a>
+                                </li>
+                            </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
             </div>
@@ -103,7 +103,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Dashboard</h1>
+                    <h1 class="page-header">Add Course</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
