--- a/PUCSD_LiveHealth/studentMgt/templates/login.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>Login | LiveHealth School</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'assets/bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
