--- a/PUCSD_LiveHealth/studentMgt/templates/admin_teacher_registration.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_teacher_registration.html
@@ -76,22 +76,22 @@
                             <!-- /input-group -->
                         </li>
                         <li class="active">
-                            <a href="#"> Dashboard </a>
+                            <a href="/dashboard/"> Dashboard </a>
                         </li>
                         <li>
-                            <a href="#"> Student Registration </a>
+                            <a href="/student_registration/"> Student Registration </a>
                         </li>
                         <li>
-                            <a href="#"> Teacher Registration </a>
+                            <a href="/teacher_registration/"> Teacher Registration </a>
                         </li>
                         <li>
-                            <a href="#"> Add  Department  </a>
+                            <a href="/render_add_department/"> Add  Department  </a>
                         </li>
                         <li>
-                            <a href="#"> Add Course </a>
+                            <a href="/add_course/"> Add Course </a>
                         </li>
                         <li>
-                            <a href="#"> Create Exam </a>
+                            <a href="/create_exam/"> Create Exam </a>
                         </li>
                     </ul>
                 </div>
@@ -103,10 +103,28 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Dashboard</h1>
+                    <h1 class="page-header">Teacher Registration</h1>
                 </div>
                 <!-- /.col-lg-12 -->
+                <div class="col-lg-4">
+                <form method="POST" action="/addTeacher/">
+                    <div class="form-group">
+                        <input type="text"  name="teacherFName" class="form-control" placeholder="first name">
+                     </div>
+                     <div class="form-group">
+                        <input type="text" name="teacherLName" class="form-control" placeholder="last name">
+                     </div>
+                     <div class="form-group">
+                        <input type="email" name="teacherEmail" class="form-control" placeholder="Email">
+                     </div>
+                     <div class="form-group">
+                        <input type="text" name="teacherContact" class="form-control" placeholder="Contact">
+                     </div>
+                     <button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
+                </form>
+                </div>
             </div>
+            
         </div>
     </div>
 
