Done with student admission in class. (DB migration require)
#21

--- a/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
@@ -144,11 +144,21 @@
                     <div class="form-group ">
                         <input type="text" id="course" placeholder="Enter Course Name" >
                     </div>    
-                <div class="form-group">
-                    <select class="form-control" id="deptList">
-                        <option value="0"> Select Department</option>
-                    </select>
-                </div>
+                    <div class="form-group">
+                        <select class="form-control" id="deptList">
+                            <option value="0"> Select Department</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control" id="courseYears">
+                            <option value="0">Number Of Years</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary pull-left" id="addCourseBtn" onclick="addCourse()" > Submit </button>
