Admin can add subjects with respect to course and year of class
#22

--- a/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_add_course.html
@@ -91,6 +91,9 @@
                                     <a href="/add_course/"> Add Course </a>
                                 </li>
                                 <li>
+                                    <a href="/add_subject/"> Add Subject </a>
+                                </li>
+                                <li>
                                     <a href="/create_exam/"> Create Exam </a>
                                 </li>
                             </ul>
