--- a/PUCSD_LiveHealth/studentMgt/templates/admin_teacher_registration.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_teacher_registration.html
@@ -67,38 +67,41 @@
                 </li>
             </ul>
             <!-- /.navbar-top-links -->
-
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
+                            <li class="sidebar-search">
                             
-                            <!-- /input-group -->
-                        </li>
-                        <li class="active">
-                            <a href="/dashboard/"> Dashboard </a>
-                        </li>
-                        <li>
-                            <a href="/student_registration/"> Student Registration </a>
-                        </li>
-                        <li>
-                            <a href="/teacher_registration/"> Teacher Registration </a>
-                        </li>
-                        <li>
-                            <a href="/render_add_department/"> Add  Department  </a>
-                        </li>
-                        <li>
-                            <a href="/add_course/"> Add Course </a>
-                        </li>
-                        <li>
-                            <a href="/create_exam/"> Create Exam </a>
-                        </li>
-                    </ul>
+                                    <!-- /input-group -->
+                                </li>
+                                <li>
+                                    <a href="/dashboard/"> Dashboard </a>
+                                </li>
+                                <li>
+                                    <a href="/student_registration/"> Student Registration </a>
+                                </li>
+                                <li>
+                                    <a href="/teacher_registration/"> Teacher Registration </a>
+                                </li>
+                                <li>
+                                    <a href="/render_add_department/"> Add  Department  </a>
+                                </li>
+                                <li>
+                                    <a href="/add_course/"> Add Course </a>
+                                </li>
+                                <li>
+                                    <a href="/add_subject/"> Add Subject </a>
+                                </li>
+                                <li>
+                                    <a href="/create_exam/"> Create Exam </a>
+                                </li>
+                            </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
             </div>
             <!-- /.navbar-static-side -->
         </nav>
+
 
         <div id="page-wrapper">
             <div class="row">
