--- a/PUCSD_LiveHealth/studentMgt/templates/admin_create_exam.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/admin_create_exam.html
@@ -106,15 +106,15 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Add Subject</h1>
+                    <h1 class="page-header">Add exam</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="addSubjectEntry" method="POST">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#addSubjectModal" onclick="courseSelMenu()" id="addCourseBtn">Add Subject</button>
-                    </form>
+                    <!--<form action="addExamEntry" method="POST"> -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#addExamModal" onclick="getSubject()" id="addCourseBtn">Add exam</button>
+                    <!--</form>-->
                 </div>
                 <div class="col-lg-12">
                     <div class="panel-heading">
@@ -122,7 +122,7 @@
                     </div>
                     <div class="panel-body">
                         <div class="table-responsive">
-                            <table class="table table-striped" id="subject_display_table">
+                            <table class="table table-striped" id="exam_display_table">
 
                             </table>
                         </div>
@@ -135,30 +135,28 @@
     </div>
 
     <!-- Modal Code -->
-    <div class="modal fade" id="addSubjectModal" role="dialog">
+    <div class="modal fade" id="addExamModal" role="dialog">
             <div class="modal-dialog modal-md">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Subject Creation</h4>
+                  <h4 class="modal-title">exam Creation</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group ">
-                        <input type="text" name ="subjectName" id="subjectName" placeholder="Enter Subject Name" >
+                    <div class="form-group">
+                        <input type="text" name ="examName" id="examName" placeholder="Enter exam Name" >
                     </div>    
                     <div class="form-group">
-                        <select class="form-control" onclick="showCourseYear()" id="courseList">
-                            <option value="0"> Select Course</option>
-                        </select>
-                    </div>
+                        <input type="date" name ="examDate" id="examDate">
+                    </div>    
                     <div class="form-group">
-                        <select class="form-control" id="courseYears">
-                            <option value="0">Select Year</option>
+                        <select class="form-control" id="examSubject">
+                            <option value="0">Select Subject</option>
                         </select>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary pull-left" id="addSubjectBtn" onclick="addSubject()" > Submit </button>
+                    <button type="button" class="btn btn-primary pull-left" id="addExamBtn" onclick="addExam()" > Submit </button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
               </div>
