--- a/PUCSD_LiveHealth/studentMgt/templates/class_teacher_index.html
+++ b/PUCSD_LiveHealth/studentMgt/templates/class_teacher_index.html
@@ -52,9 +52,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Admin Dashboard</a>
-           
+
             </div>
-            
+
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -72,26 +72,14 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                            
+
                             <!-- /input-group -->
                         </li>
                         <li class="active">
                             <a href="#"> Dashboard </a>
                         </li>
                         <li>
-                            <a href="#"> Student Registration </a>
-                        </li>
-                        <li>
-                            <a href="#"> Teacher Registration </a>
-                        </li>
-                        <li>
-                            <a href="#"> Add  Department  </a>
-                        </li>
-                        <li>
-                            <a href="#"> Add Course </a>
-                        </li>
-                        <li>
-                            <a href="#"> Create Exam </a>
+                            <a href="/render_add_attendance/"> Student attendance</a>
                         </li>
                     </ul>
                 </div>
